# primai-shared

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
primai_shared.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
shared/: __init__.py  constants.py  database.py  enums.py  schemas.py  utils.py
shared/models/: __init__.py  autoswitch.py  base.py  chat_message.py  chat_session.py  conversation.py  document.py  email.py  email_log.py  event.py  funnel_event.py  insurer.py  lead.py  message.py  premium_query.py  session.py  session_document.py  tool_execution.py  user.py
shared/repositories/: __init__.py  base_repository.py  chat_message_repository.py  chat_session_repository.py  email_log_repository.py  event_repository.py  funnel_event_repository.py  lead_repository.py  session_document_repository.py  session_repository.py  tool_execution_repository.py  user_repository.py
